--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@types/react-scroll": "^1.8.5",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll": "^1.8.9",
     "sass": "^1.56.2",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
