--- a/package.json
+++ b/package.json
@@ -6,16 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest --watch",
-    "test:coverage": "jest --watch --coverage",
-    "test:ci": "jest"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
-    "@types/react-scroll": "^1.8.5",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "next": "13.0.5",
@@ -27,11 +20,12 @@
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@types/node": "^20.6.0",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-scroll": "^1.8.7",
     "autoprefixer": "^10.4.13",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
+    "bun-types": "^1.0.2",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
   }
